--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
         </div>
 
         <div class="services" id="services">
-          
+          <div>
           <h2 class="Service">Our services</h2>
+        </div>
           
            <div class="Cards">
             <div class="card" style="width: 18rem;">
