--- a/index.html
+++ b/index.html
@@ -145,11 +145,35 @@
           </div>
 
           <div class="Info">
+            <img src="1200x-1.png" alt="" width="100%" height="400px">
+
+            <div class="coord">
+              <div class="infotext">
+                <ion-icon name="mail"></ion-icon>
+                <h6>Info.email@gmail.com</h6>
+              </div>
+              <div class="infotext">
+                <ion-icon name="call"></ion-icon>
+                <h6>(+212)655347843</h6>
+              </div>
+              <div class="infotext">
+                <ion-icon name="call"></ion-icon>
+                <h6>(+212)522347843</h6>
+              </div>
+              <div class="infotext">
+                <ion-icon name="location"></ion-icon>
+                <h6>05 rue Sabra quatier des quartier Casablanca</h6>
+              </div>
+
+
+            </div>
 
           </div>
 
         </div>
     </main>
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     
 </body>
 </html>
